# MorrisonPolynomialFiltering

./: .gitignore  LCDPython.md  LICENSE  README.md  test.ipynb
Cpp/: CMakeLists.txt  CPP.md  Eigen.Doxyfile  TestData.hpp
Cpp/Boost/: CMakeLists.txt
Cpp/Boost/src/: AbstractRadarCoordinates.hpp  EigenTest.cpp  Filtering.hpp  RadarCoordinatesTemplate.hpp  testDriver.cpp
Cpp/Eigen/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  EigenTest  Makefile  cmake-clean.sh  cmake.sh  cmake_install.cmake
Cpp/Eigen/.csettings/: 0.1515537363_cdtBuildSystem  0.1515537363_org.eclipse.cdt.core.settings
Cpp/Eigen/FilteringEigen/FilteringEigen.xcodeproj/: project.pbxproj
Cpp/Eigen/FilteringEigen/FilteringEigen.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Cpp/Eigen/FilteringEigen/FilteringEigen.xcodeproj/project.xcworkspace/xcuserdata/lintondf.xcuserdatad/: UserInterfaceState.xcuserstate
Cpp/Eigen/FilteringEigen/FilteringEigen.xcodeproj/xcuserdata/lintondf.xcuserdatad/xcschemes/: xcschememanagement.plist
Cpp/Eigen/include/polynomialfiltering/: IManagedFilter.hpp  Main.hpp  PolynomialFilteringEigen.hpp  clean.sh
Cpp/Eigen/include/polynomialfiltering/Components/: AbstractRecursiveFilter.hpp  EmpFmpPair.hpp  ExpandingMemoryPolynomialFilter.hpp  FadingMemoryPolynomialFilter.hpp  FixedMemoryPolynomialFilter.hpp  IRecursiveFilter.hpp
Cpp/Eigen/include/polynomialfiltering/components/: AbstractRecursiveFilter.hpp  Emp.hpp  EmpFmpPair.hpp  ExpandingMemoryPolynomialFilter.hpp  FadingMemoryPolynomialFilter.hpp  FixedMemoryPolynomialFilter.hpp  Fmp.hpp  ICore.hpp  PairedPolynomialFilter.hpp  RecursivePolynomialFilter.hpp
Cpp/Eigen/include/polynomialfiltering/filters/: FixedMemoryPolynomialFilter.hpp  IManagedFilter.hpp  ManagedFilterBase.hpp  PairedPolynomialFilter.hpp  RecursivePolynomialFilter.hpp
Cpp/Eigen/include/polynomialfiltering/filters/controls/: BaseScalarJudge.hpp  ConstantObservationErrorModel.hpp  IJudge.hpp  IMonitor.hpp  IObservationErrorModel.hpp
Cpp/Eigen/include/polynomialfiltering/filters/controls/errormodel/: ConstantObservationErrorModel.hpp
Cpp/Eigen/src/: EigenTest.cpp  Filtering.cpp  RadarCoordinates.hpp  expm.hpp
Cpp/Eigen/src/polynomialfiltering/: Main.cpp
Cpp/Eigen/src/polynomialfiltering/components/: AbstractRecursiveFilter.cpp  Emp.cpp  EmpFmpPair.cpp  ExpandingMemoryPolynomialFilter.cpp  FadingMemoryPolynomialFilter.cpp  FixedMemoryPolynomialFilter.cpp  Fmp.cpp  ICore.cpp  IRecursiveFilter.cpp  PairedPolynomialFilter.cpp  RecursivePolynomialFilter.cpp
Cpp/Eigen/src/polynomialfiltering/filters/: FixedMemoryPolynomialFilter.cpp  ManagedFilterBase.cpp  PairedPolynomialFilter.cpp  RecursivePolynomialFilter.cpp
Cpp/Eigen/src/polynomialfiltering/filters/controls/: BaseScalarJudge.cpp  ConstantObservationErrorModel.cpp
Cpp/Eigen/src/polynomialfiltering/filters/controls/errormodel/: ConstantObservationErrorModel.cpp
Cpp/Eigen/test/: AbstractRecursiveFilter_test.cpp  CMakeLists.txt  CTestTestfile.cmake  EMP_test.cpp  EmpFmpPair_test.cpp  FMP_test.cpp  FilteringEigenTest  FixedMemoryFilter_test.cpp  Makefile  cmake_install.cmake  testMain.cpp
Cpp/Eigen/test/components/: EMP_test.cpp  Fmp_test.cpp  RecursivePolynomialFilter_test.cpp
Cpp/Eigen/test/filters/controls/: ConstantObservationErrorModel_test.cpp
Cpp/Eigen/test/polynomialfiltering/components/: EMP_test.cpp  FixedMemoryFilter_test.cpp  Fmp_test.cpp  Pair_test.cpp  RecursivePolynomialFilter_test.cpp
Cpp/Eigen/test/polynomialfiltering/filters/controls/: ConstantObservationErrorModel_test.cpp
Cpp/include/polynomialfiltering/: Main.hpp  PolynomialFilteringEigen.hpp
Cpp/include/polynomialfiltering/Components/: FixedMemoryPolynomialFilter.hpp
Cpp/src/: EigenTest.cpp  Filtering.cpp  RadarCoordinatesTemplate.hpp  expm.hpp
Cpp/src/polynomialfiltering/: Main.cpp
Cpp/src/polynomialfiltering/components/: FixedMemoryPolynomialFilter.cpp
Java/: .classpath  .project  pom.xml
Java/data/: ComputedEMPVRF.nb  ComputedFMPVRF.nb  EMP_diary.txt  FMP_diary.txt  LcdPython.g4  MorrisonCVRF.nb  dAzimuth.nb  dEast.nb  dElevation.nb  dNorth.nb  dUp.nb
Java/data/templates/: Cpp.ftlh  CppBoost_cpp.ftlh  CppBoost_hpp.ftlh  Hpp.ftlh  Test.ftlh
Java/resources/: logback.xml
Octave/src/polygen/: Ns_E2F.m  Readme.m  all_laguerre.m  all_legendre.m  fmatrix.m  gamma_EMP_coefficients.m  gamma_FMP_coefficients.m  laguerre_gamma_test.m  laguerre_norm.m  laguerre_polynomial.m  legendre_gamma_test.m  legendre_norm.m  legendre_polynomial.m  pmatrix.m  vrf_EMP_polynomial.m  vrf_FMP_polynomial.m  vrf_all.m  vrf_diag_emp.m  vrf_diag_fmp.m
Python/: testAbstractRecursiveFilter.nc  testEmpFmpPair.nc  testFixedMemoryFiltering.nc  testtestConstantObservationErrorModel.nc
Python/scrap/: AbstractRecursiveFilter_test.py  CovarianceIntersection.py  DoxygenTest.py  EmpFmpPair.py  ExpandingMemoryPolynomialFilter_test.py  FadingMemoryPolynomialFilter.py  FadingStatistics.py  Filtering_test.py  NetCDF4_test.py  ThinkDSP.py
Python/src/: CovarianceIntersection.py  FadingStatistics.py  Filtering.py  RadarCoordinates.py  RadarCoordinatesTemplate.py  SymPyDriver.py  TranspilerTest.py  cmakeclean.py  peg.py
Python/src/PolynomialFiltering/: IManagedFilter.py  Main.py  PythonUtilities.py
Python/src/polynomialfiltering/: AbstractComponentFilter.py  Geodesy.py  IComponentFilter.py  Main.py  PythonUtilities.py  RadarCoordinates.py  Site.py
Python/test/: .coverage  AbstractRecursiveFilter_test.py  CovarianceIntersection.py  EMP_test.py  FMP_test.py  Filtering_test.py  FixedMemoryFilter_test.py  FixedMemoryFiltering.nc  FloatingPointDifferences.py  Geodesy_test.py  RadarCoordinates_test.py  TestData.py  TestSuite.py  TestUtilities.py  landing.csv  work.py
Python/test/Components/: AbstractRecursiveFilter_test.py  EMP_test.py  (+3 more)
Tools/: .classpath  .gitignore  pom.xml
Tools/data/: FMP_check.txt  FMP_diary.txt  TranspilerImports.xml  dAzimuth.nb  dEast.nb  dElevation.nb  dNorth.nb  dRange.nb  dUp.nb
Tools/resources/: logback.xml
eclipse/Filtering/: .project  .pydevproject  requirements.txt
(+281 files in other folders)
